<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="false"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/login_back"
    tools:context="com.appvisiondesigner.sbnmx.KCORegister">


        <FrameLayout
            android:id="@+id/status_bar"
            android:layout_width="match_parent"
            android:layout_height="25sp"
            android:background="?attr/colorPrimary"/>

        <include
            android:id="@+id/tool_bar_null"
            layout="@layout/tool_bar_null">
        </include>

        <ScrollView
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="vertical"
                android:background="@drawable/registro_back_user">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView2"
                    android:src="@drawable/registro_perfil"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/uploadPhoto"
                    android:id="@+id/photoProfile"
                    android:layout_gravity="center_horizontal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin3"
                android:paddingRight="@dimen/activity_horizontal_margin3">

                <EditText
                    android:id="@+id/inp_name_r"
                    android:hint="@string/r_name"
                    style="@style/customInputR"
                    android:drawableLeft="@drawable/registro_nombre"/>

                <EditText
                    android:id="@+id/inp_state_r"
                    android:hint="@string/r_state"
                    style="@style/customInputR"
                    android:drawableLeft="@drawable/ubicacion_direccion"/>

                <EditText
                    android:id="@+id/inp_email_r"
                    android:hint="@string/r_email"
                    style="@style/customInputR"
                    android:drawableLeft="@drawable/registro_mail"/>

                <EditText
                    android:id="@+id/inp_password_r"
                    android:hint="@string/r_password"
                    style="@style/customInputR"
                    android:drawableLeft="@drawable/registro_pass"/>

                <EditText
                    android:id="@+id/inp_genre_r"
                    android:hint="@string/r_genre"
                    style="@style/customInputR"
                    android:drawableLeft="@drawable/registro_sexo"/>

                <EditText
                    android:id="@+id/inp_med_serv_r"
                    android:hint="@string/r_med_service"
                    style="@style/customInputR"
                    android:drawableLeft="@drawable/registro_servicio_medico"/>

                <EditText
                    android:id="@+id/inp_blood_r"
                    android:hint="@string/r_blood_type"
                    style="@style/customInputR"
                    android:drawableLeft="@drawable/registro_tipo_sangre"/>

                <EditText
                    android:id="@+id/inp_hobbies_r"
                    android:hint="@string/r_hobbies"
                    style="@style/customInputR"
                    android:drawableLeft="@drawable/registro_hobbies"/>

                <ImageButton
                    style="@style/customInput"
                    android:id="@+id/btnRegister"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/button_register"
                    android:layout_marginTop="20dp"/>

            </LinearLayout>

        </LinearLayout>

        </ScrollView>

</LinearLayout>
