<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/login_back"
    tools:context="com.appvisiondesigner.sbnmx.KCOLogin">


    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/login_ciudad"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:id="@+id/inp_soid"
        android:hint="@string/txt_soid"
        style="@style/editTextCustom"
        android:background="@drawable/login_botonj"
        android:drawableLeft="@drawable/login_id_usuario"
        android:drawablePadding="10dp"
        android:paddingLeft="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="-70dp"
        android:layout_marginLeft="30dp"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/inp_pass"
        android:hint="@string/txt_pass"
        style="@style/editTextCustom"
        android:background="@drawable/login_botonj"
        android:drawableLeft="@drawable/login_pass"
        android:drawablePadding="10dp"
        android:paddingLeft="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_below="@+id/inp_soid"/>

    <ImageButton
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:id="@+id/btnLogin"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/login_btn_entrar"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/inp_pass"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/forgetPass"
        android:id="@+id/forgotPass"
        android:clickable="true"
        android:onClick="forgotPassword"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
