<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    android:orientation="vertical"
    android:background="@drawable/login_back"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.appvisiondesigner.sbnmx.KCOLoginProblems">

    <FrameLayout
        android:id="@+id/status_bar"
        android:layout_width="match_parent"
        android:layout_height="25sp"
        android:background="?attr/colorPrimary"/>

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar">
    </include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_below="@id/tool_bar">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:src="@drawable/login_ciudad"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="-70dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt1_problems"
            android:id="@+id/txt1_problems"
            android:layout_below="@+id/imageView2"
            android:layout_marginTop="-50dp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt2_problems"
            android:id="@+id/txt2_problems"
            android:layout_above="@+id/txt1_problems"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:onClick="sendMail"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt3_problems"
            android:id="@+id/txt3_problems"
            android:layout_below="@+id/txt2_problems"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:onClick="sendForm"/>

    </RelativeLayout>

</LinearLayout>
